<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".game">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="305dp"
        android:layout_height="311dp"
        android:layout_marginBottom="156dp"
        android:contentDescription="@string/grid"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/players"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/onimg" />

    <TextView
        android:id="@+id/players"
        android:layout_width="306dp"
        android:layout_height="85dp"
        android:layout_marginTop="80dp"
        android:fontFamily="cursive"
        android:shadowColor="#04B1A2"
        android:shadowDx="2"
        android:shadowDy="2"
        android:shadowRadius="10"
        android:text="@string/playerStatus"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="45sp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/img11"
        android:layout_width="77dp"
        android:layout_height="85dp"
        android:tag="0"
        app:layout_constraintBottom_toBottomOf="@+id/imageView2"
        app:layout_constraintEnd_toEndOf="@+id/imageView2"
        app:layout_constraintHorizontal_bias="0.039"
        app:layout_constraintStart_toStartOf="@+id/imageView2"
        app:layout_constraintTop_toTopOf="@+id/imageView2"
        app:layout_constraintVertical_bias="0.039"
        app:srcCompat="@drawable/imgtictoe"
        android:contentDescription="@string/img11"
        android:onClick="click" />

    <ImageView
        android:id="@+id/img12"
        android:layout_width="77dp"
        android:layout_height="85dp"
        android:tag="1"
        app:layout_constraintBottom_toBottomOf="@+id/imageView2"
        app:layout_constraintEnd_toEndOf="@+id/imageView2"
        app:layout_constraintHorizontal_bias="0.197"
        app:layout_constraintStart_toEndOf="@+id/img11"
        app:layout_constraintTop_toTopOf="@+id/imageView2"
        app:layout_constraintVertical_bias="0.039"
        app:srcCompat="@drawable/imgtictoe"
        android:contentDescription="@string/img12"
        android:onClick="click" />

    <ImageView
        android:id="@+id/img13"
        android:layout_width="77dp"
        android:layout_height="85dp"
        android:tag="2"
        app:layout_constraintBottom_toBottomOf="@+id/imageView2"
        app:layout_constraintEnd_toEndOf="@+id/imageView2"
        app:layout_constraintHorizontal_bias="0.729"
        app:layout_constraintStart_toEndOf="@+id/img12"
        app:layout_constraintTop_toTopOf="@+id/imageView2"
        app:layout_constraintVertical_bias="0.039"
        app:srcCompat="@drawable/imgtictoe"
        android:onClick="click"
        android:contentDescription="@string/img13" />

    <ImageView
        android:id="@+id/img21"
        android:layout_width="77dp"
        android:layout_height="85dp"
        android:tag="3"
        app:layout_constraintBottom_toBottomOf="@+id/imageView2"
        app:layout_constraintEnd_toEndOf="@+id/imageView2"
        app:layout_constraintHorizontal_bias="0.039"
        app:layout_constraintStart_toStartOf="@+id/imageView2"
        app:layout_constraintTop_toTopOf="@+id/imageView2"
        app:layout_constraintVertical_bias="0.504"
        app:srcCompat="@drawable/imgtictoe"
        android:onClick="click"
        android:contentDescription="@string/img21" />

    <ImageView
        android:id="@+id/img22"
        android:layout_width="77dp"
        android:layout_height="85dp"
        android:tag="4"
        app:layout_constraintBottom_toBottomOf="@+id/imageView2"
        app:layout_constraintEnd_toEndOf="@+id/imageView2"
        app:layout_constraintHorizontal_bias="0.197"
        app:layout_constraintStart_toEndOf="@+id/img21"
        app:layout_constraintTop_toTopOf="@+id/imageView2"
        app:layout_constraintVertical_bias="0.504"
        app:srcCompat="@drawable/imgtictoe"
        android:onClick="click"
        android:contentDescription="@string/img22" />

    <ImageView
        android:id="@+id/img23"
        android:layout_width="77dp"
        android:layout_height="85dp"
        android:contentDescription="@string/img23"
        android:onClick="click"
        android:tag="5"
        app:layout_constraintBottom_toBottomOf="@+id/imageView2"
        app:layout_constraintEnd_toEndOf="@+id/imageView2"
        app:layout_constraintHorizontal_bias="0.729"
        app:layout_constraintStart_toEndOf="@+id/img22"
        app:layout_constraintTop_toTopOf="@+id/imageView2"
        app:layout_constraintVertical_bias="0.504"
        app:srcCompat="@drawable/imgtictoe"
        tools:ignore="ImageContrastCheck" />

    <ImageView
        android:id="@+id/img31"
        android:layout_width="77dp"
        android:layout_height="85dp"
        android:layout_marginTop="16dp"
        android:tag="6"
        app:layout_constraintBottom_toBottomOf="@+id/imageView2"
        app:layout_constraintEnd_toEndOf="@+id/imageView2"
        app:layout_constraintHorizontal_bias="0.039"
        app:layout_constraintStart_toStartOf="@+id/imageView2"
        app:layout_constraintTop_toBottomOf="@+id/img21"
        app:layout_constraintVertical_bias="0.181"
        app:srcCompat="@drawable/imgtictoe"
        android:onClick="click"
        android:contentDescription="@string/img31" />

    <ImageView
        android:id="@+id/img32"
        android:layout_width="77dp"
        android:layout_height="85dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="16dp"
        android:tag="7"
        app:layout_constraintBottom_toBottomOf="@+id/imageView2"
        app:layout_constraintEnd_toEndOf="@+id/imageView2"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/img31"
        app:layout_constraintTop_toBottomOf="@+id/img22"
        app:layout_constraintVertical_bias="0.181"
        app:srcCompat="@drawable/imgtictoe"
        android:onClick="click"
        android:contentDescription="@string/img32" />

    <ImageView
        android:id="@+id/img33"
        android:layout_width="77dp"
        android:layout_height="85dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:tag="8"
        app:layout_constraintBottom_toBottomOf="@+id/imageView2"
        app:layout_constraintEnd_toEndOf="@+id/imageView2"
        app:layout_constraintHorizontal_bias="0.23"
        app:layout_constraintStart_toEndOf="@+id/img32"
        app:layout_constraintTop_toBottomOf="@+id/img23"
        app:layout_constraintVertical_bias="0.181"
        app:srcCompat="@drawable/imgtictoe"
        android:onClick="click"
        android:contentDescription="@string/img33" />

    <GridLayout
        android:id="@+id/gridLayout"
        android:layout_width="263dp"
        android:layout_height="170dp"
        android:layout_marginTop="220dp"
        android:background="#DFC0C0"
        android:orientation="vertical"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.567"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/player_status"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="cursive"
            android:text="@string/play_result"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="30sp"
            android:textStyle="italic" />

        <Button
            android:id="@+id/PlayAgain"
            android:layout_width="199dp"
            android:layout_height="66dp"
            android:layout_row="2"
            android:layout_column="0"
            android:layout_gravity="center"
            android:text="@string/play_again"
            android:textAlignment="center"
            android:textStyle="italic" />
    </GridLayout>

</androidx.constraintlayout.widget.ConstraintLayout>